# aa-bigco-demo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DSPy_Optimization.md  INSTRUCTION_CAPTURE_README.md  README.md  debug_logging.py  demo.py  demo_compare.py  main.py  optimization_results.json  optimization_results_arc_gepa.json  optimization_results_arc_gepa_3.json  optimization_results_arc_gepa_4.json  optimization_results_arc_gepa_5.json  optimization_results_arc_gepa_6.json  optimization_results_arc_gepa_7.json  optimization_results_arc_gepa_8.json  optimization_results_arc_mipro.json  optimization_results_gepa.json  optimization_results_mipro.json  optimization_results_strategyqa_gepa.json  optimization_results_strategyqa_gepa_3.json  optimization_results_strategyqa_gepa_4.json  optimization_results_strategyqa_gepa_5.json  optimization_results_strategyqa_gepa_6.json  optimization_results_strategyqa_gepa_7.json  optimization_results_strategyqa_gepa_8.json  optimization_results_strategyqa_mipro.json  pyproject.toml  run_both_optimizers.sh  run_phase2_arc.py  run_phase2_strategyqa.py
.jfrog/projects/: pip.yaml
dspy_demo/: __init__.py  config.py  pipeline.py
dspy_demo/core/: __init__.py  data.py  metrics.py  modules.py  tracker.py
log_viz/: README.md  app.py  data_loader.py  plots.py  requirements.txt
log_viz/components/: __init__.py  instruction_viewer.py  metrics_cards.py  sidebar.py  trials_table.py
log_viz/pages/: compare_optimizers.py
log_viz/runs/: trials_20260212_093639.jsonl  trials_20260212_105204.jsonl  trials_20260217_150530.jsonl  trials_20260217_150956.jsonl  trials_20260217_151908.jsonl  trials_20260217_153453.jsonl  trials_20260217_154104.jsonl  trials_20260217_160455.jsonl  (+24 more)
tests/: __init__.py  conftest.py
(+17 files in other folders)
